--- a/coc-settings.json
+++ b/coc-settings.json
@@ -7,6 +7,7 @@
   "coc.source.iced.enable": true,
   "coc.preferences.formatOnSaveFiletypes": [
     "python",
+    "rust",
     "javascript",
     "javascriptreact",
     "typescript",
