--- a/coc-settings.json
+++ b/coc-settings.json
@@ -5,6 +5,26 @@
   "codeLens.enable": true,
   "signature.target": "echo",
   "coc.source.iced.enable": true,
+  "python.formatting.provider": "black",
+  "diagnostic-languageserver.filetypes": {
+    "javascriptreact": "eslint",
+    "typescriptreact": "eslint",
+    "javascript": "eslint",
+    "typescript": "eslint",
+    "python": "mypy"
+  },
+  "diagnostic-languageserver.formatFiletypes": {
+    "javascriptreact": "prettier",
+    "typescriptreact": "prettier",
+    "javascript": "prettier",
+    "typescript": "prettier",
+    "html": "prettier",
+    "css": "prettier",
+    "scss": "prettier",
+    "json": "prettier",
+    "python": ["black", "isort"],
+    "elixir": "mix_format"
+  },
   "coc.preferences.formatOnSaveFiletypes": [
     "python",
     "rust",
