some more stuff

--- a/kitty.conf
+++ b/kitty.conf
@@ -633,6 +633,35 @@ font_size 28.0
 
 #: }}}
 
+# Colors (OneDark)
+
+foreground #979eab
+background #282c34
+
+color0 #282c34
+color1 #e06c75
+color2 #98c379
+color3 #e5c07b
+color4 #61afef
+color5 #be5046
+color6 #56b6c2
+color7 #979eab
+color8 #393e48
+color9 #d19a66
+color10 #56b6c2
+color11 #e5c07b
+color12 #61afef
+color13 #be5046
+color14 #56b6c2
+color15 #abb2bf
+
+# Tab Bar
+
+active_tab_foreground   #282c34
+active_tab_background   #979eab
+inactive_tab_foreground #abb2bf
+inactive_tab_background #282c34
+
 #: Color scheme {{{
 
 # foreground #dddddd
@@ -1094,8 +1123,10 @@ font_size 28.0
 # map cmd+down            scroll_line_down
 # map kitty_mod+page_up   scroll_page_up
 # map cmd+page_up         scroll_page_up
+map kitty_mod+k         scroll_page_up
 # map kitty_mod+page_down scroll_page_down
 # map cmd+page_down       scroll_page_down
+map kitty_mod+j       scroll_page_down
 # map kitty_mod+home      scroll_home
 # map cmd+home            scroll_home
 # map kitty_mod+end       scroll_end
