--- a/kitty.conf
+++ b/kitty.conf
@@ -633,34 +633,50 @@ font_size 28.0
 
 #: }}}
 
-# Colors (OneDark)
+# Color 
+# Base16 Tomorrow Night - kitty color config
+# Scheme by Chris Kempson (http://chriskempson.com)
+background #1d1f21
+foreground #c5c8c6
+selection_background #c5c8c6
+selection_foreground #1d1f21
+url_color #b4b7b4
+cursor #c5c8c6
+active_border_color #969896
+inactive_border_color #282a2e
+active_tab_background #1d1f21
+active_tab_foreground #c5c8c6
+inactive_tab_background #282a2e
+inactive_tab_foreground #b4b7b4
+tab_bar_background #282a2e
 
-foreground #979eab
-background #282c34
+# normal
+color0 #1d1f21
+color1 #cc6666
+color2 #b5bd68
+color3 #f0c674
+color4 #81a2be
+color5 #b294bb
+color6 #8abeb7
+color7 #c5c8c6
 
-color0 #282c34
-color1 #e06c75
-color2 #98c379
-color3 #e5c07b
-color4 #61afef
-color5 #be5046
-color6 #56b6c2
-color7 #979eab
-color8 #393e48
-color9 #d19a66
-color10 #56b6c2
-color11 #e5c07b
-color12 #61afef
-color13 #be5046
-color14 #56b6c2
-color15 #abb2bf
+# bright
+color8 #969896
+color9 #cc6666
+color10 #b5bd68
+color11 #f0c674
+color12 #81a2be
+color13 #b294bb
+color14 #8abeb7
+color15 #ffffff
 
-# Tab Bar
-
-active_tab_foreground   #282c34
-active_tab_background   #979eab
-inactive_tab_foreground #abb2bf
-inactive_tab_background #282c34
+# extended base16 colors
+color16 #de935f
+color17 #a3685a
+color18 #282a2e
+color19 #373b41
+color20 #b4b7b4
+color21 #e0e0e0
 
 #: Color scheme {{{
 
@@ -829,7 +845,7 @@ inactive_tab_background #282c34
 #: to yes means that any background processes still using the terminal
 #: can fail silently because their stdout/stderr/stdin no longer work.
 
-allow_remote_control yes
+# allow_remote_control no
 
 #: Allow other programs to control kitty. If you turn this on other
 #: programs can control all aspects of kitty, including sending text
