removed oh-my-zsh

--- a/kitty.conf
+++ b/kitty.conf
@@ -11,6 +11,8 @@ font_family      mononoki Nerd Font Mono
 # italic_font      auto
 # bold_italic_font auto
 
+shell_integration enabled
+
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
 #: list-fonts` command. By default they are derived automatically, by
